# env-settings

./: .gitignore  LICENSE  README.md  requirements-build.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test_project.yml
.run/: Build distribution.run.xml  Coverage report.run.xml  Flake8 check.run.xml  Pytest with coverage.run.xml  Pytest.run.xml  Upload Test PyPi (use .pypirc).run.xml  coverage report.run.xml  pytest with coverage.run.xml  pytest.run.xml
src/env_settings/: __init__.py  config.py  generator.py  utils.py
tests/env_settings/: conftest.py  test___init__.py  test_config.py  test_generator.py  test_utils.py
