[metadata]
name = env-settings
version = 0.0.4
author = Andy Kovalev
author_email = kovalev.andy@yandex.ru
description = Universal module for using Python program settings based on environment variables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andy-kovalev/env-settings
keywords = environment variables settings env-settings
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = python-dotenv

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    flake8
    flake8-bugbear
